<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.example</groupId>
  <artifactId>java-libraries-data</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>jar</packaging>

  <properties>

    <!-- used only in dependency management to force this version, not included as a direct dependency -->
    <junit.version>4.13.2</junit.version>
    <assertj.version>3.26.0</assertj.version>
    <hamcrest.version>2.2</hamcrest.version>
    <hamcrest-all.version>1.3</hamcrest-all.version>
    <mockito.version>5.12.0</mockito.version>
    <byte-buddy.version>1.14.18</byte-buddy.version>

    <!-- logging -->
    <!-- overwriting in the slf4j and logback in the hibernate-jpa, spring-data-eclipselink. When updated to the latest version remove the version from that module-->
    <org.slf4j.version>2.0.13</org.slf4j.version>
    <logback.version>1.5.6</logback.version>

    <!-- plugins -->
    <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
    <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
    <exec-maven-plugin.version>3.3.0</exec-maven-plugin.version>
    <java.version>8</java.version>
    <log4j.version>1.2.17</log4j.version>
    <jmh-core.version>1.37</jmh-core.version>
    <jmh-generator.version>1.37</jmh-generator.version>
    <maven-failsafe-plugin.version>3.3.0</maven-failsafe-plugin.version>
    <commons-io.version>2.16.1</commons-io.version>
    <commons-collections4.version>4.5.0-M2</commons-collections4.version>
    <commons-lang3.version>3.14.0</commons-lang3.version>
    <commons-cli.version>1.8.0</commons-cli.version>
    <maven-war-plugin.version>3.4.0</maven-war-plugin.version>
    <javax.servlet-api.version>4.0.1</javax.servlet-api.version>
    <jstl-api.version>1.2</jstl-api.version>
    <javax.servlet.jsp-api.version>2.3.3</javax.servlet.jsp-api.version>
    <jstl.version>1.2</jstl.version>
    <jackson.version>2.17.2</jackson.version>
    <commons-fileupload.version>1.5</commons-fileupload.version>
    <junit-platform.version>1.11.0-M2</junit-platform.version>
    <junit-jupiter.version>5.11.0-M2</junit-jupiter.version>
    <junit-platform-surefire-provider.version>1.3.2</junit-platform-surefire-provider.version>
    <directory-maven-plugin.version>1.0</directory-maven-plugin.version>
    <maven-install-plugin.version>3.1.2</maven-install-plugin.version>
    <custom-pmd.version>0.0.1</custom-pmd.version>
    <maven-jxr-plugin.version>3.4.0</maven-jxr-plugin.version>
    <gitflow-incremental-builder.version>4.5.4</gitflow-incremental-builder.version>
    <maven-pmd-plugin.version>3.26.0</maven-pmd-plugin.version>
    <lombok.version>1.18.36</lombok.version>
    <h2.version>2.2.224</h2.version>
    <guava.version>33.2.1-jre</guava.version>
    <maven-jar-plugin.version>3.4.2</maven-jar-plugin.version>
    <mockito-inline.version>5.2.0</mockito-inline.version>
    <mockito-junit-jupiter.version>5.12.0</mockito-junit-jupiter.version>
    <logback.configurationFileName>logback-config-global.xml</logback.configurationFileName>
    <jsoup.version>1.17.2</jsoup.version>
    <jaxb-runtime.version>4.0.3</jaxb-runtime.version>

    <httpclient.version>3.1</httpclient.version>
    <kafka.version>3.3.1</kafka.version>
    <gson.version>2.11.0</gson.version>
    <cache.version>1.1.1</cache.version>
    <flink.version>1.20.0</flink.version>
    <hazelcast.version>5.2.0</hazelcast.version>
    <javassist.version>3.29.2-GA</javassist.version>
    <caffeine.version>3.2.3</caffeine.version>
    <org.modelmapper.version>3.2.0</org.modelmapper.version>
    <dozer.version>5.5.1</dozer.version>
    <javatuples.version>1.2</javatuples.version>
    <flink-connector-kafka.version>1.17.2</flink-connector-kafka.version>
  </properties>

  <dependencies>
    <!-- https://mvnrepository.com/artifact/junit/junit -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.ow2.asm</groupId>
      <artifactId>asm</artifactId>
      <version>9.9</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/com.github.oshi/oshi-core -->
    <dependency>
      <groupId>com.github.oshi</groupId>
      <artifactId>oshi-core</artifactId>
      <version>6.4.11</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest -->
    <dependency>
      <groupId>org.hamcrest</groupId>
      <artifactId>hamcrest</artifactId>
      <version>2.2</version>
      <scope>test</scope>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>3.19.0</version>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>3.11.0</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.kafka</groupId>
      <artifactId>kafka-streams</artifactId>
      <version>${kafka.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.kafka</groupId>
      <artifactId>kafka-clients</artifactId>
      <version>${kafka.version}</version>
      <classifier>test</classifier>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>${gson.version}</version>
    </dependency>
    <!-- Jcache -->
    <dependency>
      <groupId>javax.cache</groupId>
      <artifactId>cache-api</artifactId>
      <version>${cache.version}</version>
    </dependency>
    <dependency>
      <groupId>com.hazelcast</groupId>
      <artifactId>hazelcast</artifactId>
      <version>${hazelcast.version}</version>
    </dependency>
    <dependency>
      <groupId>org.javassist</groupId>
      <artifactId>javassist</artifactId>
      <version>${javassist.version}</version>
    </dependency>
    <dependency>
      <groupId>commons-cli</groupId>
      <artifactId>commons-cli</artifactId>
      <version>${commons-cli.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>${commons-io.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>commons-httpclient</groupId>
      <artifactId>commons-httpclient</artifactId>
      <version>${httpclient.version}</version>
      <scope>provided</scope>
      <exclusions>
        <exclusion>
          <groupId>commons-codec</groupId>
          <artifactId>commons-codec</artifactId>
        </exclusion>
        <exclusion>
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>com.h2database</groupId>
      <artifactId>h2</artifactId>
      <version>1.3.170</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>${jackson.version}</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${org.slf4j.version}</version>
    </dependency>
    <dependency>
      <groupId>com.thoughtworks.xstream</groupId>
      <artifactId>xstream</artifactId>
      <version>1.4.16</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.data</groupId>
      <artifactId>spring-data-jpa</artifactId>
      <version>2.1.5.RELEASE</version>
    </dependency>
    <dependency>
      <groupId>javax.persistence</groupId>
      <artifactId>javax.persistence-api</artifactId>
      <version>2.2</version>
    </dependency>
    <dependency>
      <groupId>com.google.inject</groupId>
      <artifactId>guice</artifactId>
      <version>7.0.0</version>
    </dependency>
    <dependency>
      <groupId>com.github.ben-manes.caffeine</groupId>
      <artifactId>caffeine</artifactId>
      <version>${caffeine.version}</version>
    </dependency>
    <dependency>
      <groupId>org.modelmapper</groupId>
      <artifactId>modelmapper</artifactId>
      <version>${org.modelmapper.version}</version>
    </dependency>
    <dependency>
      <groupId>net.sf.dozer</groupId>
      <artifactId>dozer</artifactId>
      <version>${dozer.version}</version>
    </dependency>
    <dependency>
      <groupId>org.javatuples</groupId>
      <artifactId>javatuples</artifactId>
      <version>${javatuples.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.flink</groupId>
      <artifactId>flink-connector-kafka</artifactId>
      <version>${flink-connector-kafka.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.flink</groupId>
      <artifactId>flink-streaming-java</artifactId>
      <version>${flink.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.flink</groupId>
      <artifactId>flink-core</artifactId>
      <version>${flink.version}</version>
      <exclusions>
        <exclusion>
          <groupId>commons-logging</groupId>
          <artifactId>commons-logging</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.apache.flink</groupId>
      <artifactId>flink-java</artifactId>
      <version>${flink.version}</version>
      <exclusions>
        <exclusion>
          <groupId>commons-logging</groupId>
          <artifactId>commons-logging</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.apache.flink</groupId>
      <artifactId>flink-test-utils</artifactId>
      <version>${flink.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>

      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>3.0.0</version>
        <configuration>
          <pom>
            <!-- These are the defaults, you can override if you want -->
            <includes>
              <include>pom.xml</include>
            </includes>

            <sortPom/>
            <!-- has its own section below -->
          </pom>
          <java>
            <googleJavaFormat>
              <version>1.17.0</version>
              <style>GOOGLE</style>
            </googleJavaFormat>
            <indent>
              <tabs>true</tabs>
              <spacesPerTab>2</spacesPerTab>
            </indent>
            <indent>
              <spaces>true</spaces>
              <spacesPerTab>4</spacesPerTab>
            </indent>
          </java>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <source>21</source>
          <target>21</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven-surefire-plugin.version}</version>
        <configuration>
          <argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
